[Complex] Fix visibility in collapsed state

--- a/packages/core/fields/complex/style.scss
+++ b/packages/core/fields/complex/style.scss
@@ -70,6 +70,10 @@
 	border-style: solid;
 	border-color: $wp-color-gray-light-500;
 
+	&[hidden] {
+		display: none;
+	}
+
 	.cf-complex--grid & {
 		margin-top: -1px;
 	}
